// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with Bolt Icon 1`] = `
<button
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="true"
  aria-label="Menu"
  className="menu-button--wrapper menu-button--wrapper--size-32"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    fill="currentColor"
    height="28"
    role="img"
    viewBox="0 0 20 20"
    width="28"
  >
    <path
      clipRule="evenodd"
      d="M11.3336 2.28375C11.6473 2.38119 11.8611 2.67147 11.8611 2.99999V7.80555H15C15.2785 7.80555 15.5341 7.95989 15.6638 8.20639C15.7934 8.45289 15.7758 8.75094 15.618 8.98045L9.50692 17.8693C9.32081 18.1401 8.98017 18.2581 8.66643 18.1607C8.35269 18.0632 8.13889 17.773 8.13889 17.4444V12.6389H5C4.72148 12.6389 4.4659 12.4845 4.33624 12.238C4.20657 11.9915 4.22418 11.6935 4.38197 11.464L10.4931 2.5751C10.6792 2.30438 11.0198 2.1863 11.3336 2.28375ZM6.42577 11.1389H8.88889C9.3031 11.1389 9.63889 11.4747 9.63889 11.8889V15.0297L13.5742 9.30555H11.1111C10.6969 9.30555 10.3611 8.96976 10.3611 8.55555V5.41475L6.42577 11.1389Z"
      fill="currentColor"
      fillRule="evenodd"
    />
  </svg>
</button>
`;

exports[`renders correctly with Bolt Icon 2`] = `
<button
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="true"
  aria-label="Menu"
  className="menu-button--wrapper dummy-class-name menu-button--wrapper--size-32"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    fill="currentColor"
    height="28"
    role="img"
    viewBox="0 0 20 20"
    width="28"
  >
    <path
      d="M6 10.5C6 11.3284 5.32843 12 4.5 12 3.67157 12 3 11.3284 3 10.5 3 9.67157 3.67157 9 4.5 9 5.32843 9 6 9.67157 6 10.5zM11.8333 10.5C11.8333 11.3284 11.1618 12 10.3333 12 9.50492 12 8.83334 11.3284 8.83334 10.5 8.83334 9.67157 9.50492 9 10.3333 9 11.1618 9 11.8333 9.67157 11.8333 10.5zM17.6667 10.5C17.6667 11.3284 16.9951 12 16.1667 12 15.3383 12 14.6667 11.3284 14.6667 10.5 14.6667 9.67157 15.3383 9 16.1667 9 16.9951 9 17.6667 9.67157 17.6667 10.5z"
      fill="currentColor"
    />
  </svg>
</button>
`;

exports[`renders correctly with empty props 1`] = `
<button
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="true"
  aria-label="Menu"
  className="menu-button--wrapper menu-button--wrapper--size-32"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    fill="currentColor"
    height="28"
    role="img"
    viewBox="0 0 20 20"
    width="28"
  >
    <path
      d="M6 10.5C6 11.3284 5.32843 12 4.5 12 3.67157 12 3 11.3284 3 10.5 3 9.67157 3.67157 9 4.5 9 5.32843 9 6 9.67157 6 10.5zM11.8333 10.5C11.8333 11.3284 11.1618 12 10.3333 12 9.50492 12 8.83334 11.3284 8.83334 10.5 8.83334 9.67157 9.50492 9 10.3333 9 11.1618 9 11.8333 9.67157 11.8333 10.5zM17.6667 10.5C17.6667 11.3284 16.9951 12 16.1667 12 15.3383 12 14.6667 11.3284 14.6667 10.5 14.6667 9.67157 15.3383 9 16.1667 9 16.9951 9 17.6667 9.67157 17.6667 10.5z"
      fill="currentColor"
    />
  </svg>
</button>
`;

exports[`renders correctly with open state 1`] = `
<button
  aria-expanded={true}
  aria-haspopup="true"
  aria-label="Menu"
  className="menu-button--wrapper menu-button--wrapper--size-32 menu-button--wrapper--open"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="menu"
  type="button"
>
  <svg
    fill="currentColor"
    height="28"
    viewBox="0 0 20 20"
    width="28"
  >
    <path
      d="M6 10.5C6 11.3284 5.32843 12 4.5 12 3.67157 12 3 11.3284 3 10.5 3 9.67157 3.67157 9 4.5 9 5.32843 9 6 9.67157 6 10.5zM11.8333 10.5C11.8333 11.3284 11.1618 12 10.3333 12 9.50492 12 8.83334 11.3284 8.83334 10.5 8.83334 9.67157 9.50492 9 10.3333 9 11.1618 9 11.8333 9.67157 11.8333 10.5zM17.6667 10.5C17.6667 11.3284 16.9951 12 16.1667 12 15.3383 12 14.6667 11.3284 14.6667 10.5 14.6667 9.67157 15.3383 9 16.1667 9 16.9951 9 17.6667 9.67157 17.6667 10.5z"
      fill="currentColor"
    />
  </svg>
</button>
`;

exports[`renders correctly with size Large 1`] = `
<button
  aria-disabled={false}
  aria-expanded={false}
  aria-haspopup="true"
  aria-label="Menu"
  className="menu-button--wrapper menu-button--wrapper--size-48"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    fill="currentColor"
    height="28"
    role="img"
    viewBox="0 0 20 20"
    width="28"
  >
    <path
      d="M6 10.5C6 11.3284 5.32843 12 4.5 12 3.67157 12 3 11.3284 3 10.5 3 9.67157 3.67157 9 4.5 9 5.32843 9 6 9.67157 6 10.5zM11.8333 10.5C11.8333 11.3284 11.1618 12 10.3333 12 9.50492 12 8.83334 11.3284 8.83334 10.5 8.83334 9.67157 9.50492 9 10.3333 9 11.1618 9 11.8333 9.67157 11.8333 10.5zM17.6667 10.5C17.6667 11.3284 16.9951 12 16.1667 12 15.3383 12 14.6667 11.3284 14.6667 10.5 14.6667 9.67157 15.3383 9 16.1667 9 16.9951 9 17.6667 9.67157 17.6667 10.5z"
      fill="currentColor"
    />
  </svg>
</button>
`;

exports[`renders correctly with tooltip content 1`] = `
<span
  className=""
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Menu"
    className="menu-button--wrapper menu-button--wrapper--size-32"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="28"
      role="img"
      viewBox="0 0 20 20"
      width="28"
    >
      <path
        d="M6 10.5C6 11.3284 5.32843 12 4.5 12 3.67157 12 3 11.3284 3 10.5 3 9.67157 3.67157 9 4.5 9 5.32843 9 6 9.67157 6 10.5zM11.8333 10.5C11.8333 11.3284 11.1618 12 10.3333 12 9.50492 12 8.83334 11.3284 8.83334 10.5 8.83334 9.67157 9.50492 9 10.3333 9 11.1618 9 11.8333 9.67157 11.8333 10.5zM17.6667 10.5C17.6667 11.3284 16.9951 12 16.1667 12 15.3383 12 14.6667 11.3284 14.6667 10.5 14.6667 9.67157 15.3383 9 16.1667 9 16.9951 9 17.6667 9.67157 17.6667 10.5z"
        fill="currentColor"
      />
    </svg>
  </button>
</span>
`;
